techniques wrap issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -462,6 +462,8 @@
     display: flex;
     margin: 0 auto;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .cards__item {
